--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,65 @@
 body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+  background: lightyellow;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+.container {
+  display: flex;
+  flex-direction: column;
+  align-items: left;
+  width: 600px;
+  margin: 0 auto;
+  padding: 30px;
+  font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
 }
+
+h1 {
+  color: hotpink;
+  font-size: 36px;
+  margin-bottom: 40px;
+}
+
+label {
+  color: deepskyblue;
+  font-size: 18px;
+  margin-right: 20px;
+}
+
+select {
+  width: 100px;
+  height: 30px;
+  margin-bottom: 20px;
+  font-size: 16px;
+  background-color: deepskyblue;
+  color: white;
+  border: none;
+  border-radius: 10px;
+}
+
+input[type="number"] {
+  width: 150px;
+  height: 30px;
+  margin-bottom: 20px;
+  font-size: 16px;
+  padding-left: 10px;
+  border: 1px solid deepskyblue;
+  border-radius: 10px;
+}
+
+button {
+  width: 100px;
+  height: 30px;
+  margin-top: 20px;
+  margin-bottom: 40px;
+  background-color: hotpink;
+  color: white;
+  border: none;
+  border-radius: 10px;
+  font-size: 16px;
+}
+
+span {
+  color: hotpink;
+  font-size: 18px;
+  margin-left: 20px;
+}
+
